--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx babel-node src/index.js",
+    "start": "npx babel-node src/index.js --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
