--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "graphql-yoga": "^5.0.0"
+    "graphql-yoga": "^5.0.0",
+    "node-uuid": "^1.4.8",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.0",
